tests/core_functions/color/hsl/error/two_args/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hsl/error/two_args"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::set_precision;

// Ignoring "alpha_type", tests with expected error not implemented yet.

// Ignoring "alpha_unit", tests with expected error not implemented yet.

// Ignoring "color_type", tests with expected error not implemented yet.
